objects/VisualAntidote__Platform_Account__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__FieldConfiguration__c</fullName>
        <label>FieldConfiguration</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__ProviderType__c</fullName>
        <label>ProviderType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FormstackDocuments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Secret__c</fullName>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Platform Account</label>
    <listViews>
        <fullName>Nolan_Daigle_Platform_Account</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>